--- a/app/views/conceptos/index.html.erb
+++ b/app/views/conceptos/index.html.erb
@@ -3,85 +3,6 @@
 
   <h1>Conceptos</h1>
 </div>
-<div class="panel panel-success">
-  <div class="panel-heading">
-    Asignaciones
-  </div>
-  <%if Concepto.all.where(tipo_de_concepto:0).length>0%>
-  <div class="panel-body">
-    <div class="table-responsive text-center">
-      <table class="table  table-condensed table-hover table-responsive table-bordered ">
-        <thead>
-          <tr>
-            <th class= "actions">Nombre</th>
-            <th class= "actions">Formula</th>
-            <th class= "actions">Formula Patrono</th>
-            <th class= "actions">Modalidad de pago</th>
-            <th class= "actions" style= "width: 100px;">Acciones</th>
-          </tr>
-        </thead>
 
-        <tbody>
-          <%
-          asignaciones=@conceptos.where(tipo_de_concepto: 0).order("created_at")
-          asignaciones.each do |concepto| %>
-          <tr>
-            <td><%= concepto.nombre %></td>
-            <td><var><%= concepto.formulas.last.empleado %></var></td>
-              <td><var><%= concepto.formulas.last.patrono %></var></td>
-            <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
-            <td>
-              <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
-
-          </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <%else%>
-  <div class="actions">
-    <h4>"No hay asignaciones disponibles"</h4>
-  </div>
-  <%end%>
-</div>
-<div class="panel panel-danger">
-  <div class="panel-heading">
-    Deducciones
-  </div>
-    <%if Concepto.all.where(tipo_de_concepto:1).length>0%>
-  <div class="panel-body">
-    <div class="table-responsive text-center">
-      <table class="table table-hover table-condensed table-responsive table-bordered">
-        <thead>
-          <tr>
-            <th class= "actions">Nombre</th>
-            <th class= "actions">Formula</th>
-            <th class= "actions">Modalidad de pago</th>
-            <th class= "actions" style= "width: 100px;">Acciones</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <%
-  deducciones=@conceptos.where(tipo_de_concepto: 1).order("created_at")
-            deducciones.each do |concepto| %>
-          <tr>
-            <td><%= concepto.nombre %></td>
-            <td><var><%= concepto.formula %></var></td>
-            <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
-            <td>              <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
-</td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <%else%>
-  <div class="actions">
-    <h4>"No hay deducciones disponibles"</h4>
-  </div>
-  <%end%>
-</div>
+  <%=render "concepto", :x => 0,:y=>"Asignaciones", :z=>"success"%>
+  <%=render "concepto", :x => 1,:y=>"Deducciones", :z=>"danger"%>
