--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -108,7 +108,7 @@ padding-left:1px;
 
         </li>
         <li>
-          <a href="mailto:<%= Settings.email_admin%>"><i class="fa fa-at fa-2x"></i> CONTACTAR ADMINISTRADOR</a>
+          <a href="mailto:<%= Setting.email_admin%>"><i class="fa fa-at fa-2x"></i> CONTACTAR ADMINISTRADOR</a>
 
         </li>
         <li>
