--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -42,8 +42,7 @@
     <div class="panel panel-primary text-center no-boder bg-color-red">
       <div class="panel-body">
         <i class="fa fa-briefcase fa-5x"></i>
-          <h3><%= Cargo.all.where(disponible:true).length%>
-        <%= link_to 'Contratar Persona', new_persona_path, class:"btn btn-default bg-color-red btn-xs"%></h3>
+          <h3><%= Cargo.all.where(disponible:true).length%></h3>
       </div>
       <div class="panel-footer back-footer-red">
         Cargos Disponibles
