--- a/app/views/cargos/_form.html.erb
+++ b/app/views/cargos/_form.html.erb
@@ -1,16 +1,5 @@
 <%= form_for @cargo ,:role => "form" do |f| %>
-<% if @cargo.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@cargo.errors.count, "error") %>
-    prohibited this cargo from being saved:</h2>
-
-  <ul>
-    <% @cargo.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= render 'layouts/errores', :x=>@cargo %>
 <div class="panel panel-default">
   <div class="panel-heading">
     Datos
@@ -18,39 +7,60 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12">
-        <div class="col-xs-6 form-group">
+        <div class="col-xs-6">
           <%= f.label :nombre %><br>
-          <%= f.text_field :nombre, :class => "form-control", REQUIRED: "", autofocus:"" %>
+          <div class="form-group input-group">
+            <span class="input-group-addon">
+              <span class="fa fa-align-justify"></span>
+            </span>
+            <%= f.text_field :nombre, :class => "form-control", REQUIRED: "", autofocus:"" %>
+          </div>
         </div>
-        <div class="col-xs-6 form-group">
+        <div class="col-xs-6">
           <%= f.label :departamento_id %><br>
-          <%= f.select(:departamento_id, options_for_select(Departamento.all.map{|s|[s.nombre, s.id]}, f.object.departamento_id),{include_blank:'Seleccione una Departamento...'},:class =>"form-control", REQUIRED: "")  %>
+          <div class="form-group input-group">
+            <span class="input-group-addon">
+              <span class="fa fa-building-o"></span>
+            </span>
+            <%= f.select(:departamento_id, options_for_select(Departamento.all.map{|s|[s.nombre, s.id]}, f.object.departamento_id),{include_blank:'Seleccione una Departamento...'},:class =>"form-control", REQUIRED: "")  %>
+          </div>
         </div>
-        <div class="col-xs-6 form-group">
-          <%= f.label :tipo %><br>
-          <%= f.select(:tipo_id, options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}, f.object.tipo_id),{include_blank:'Seleccione un Tipo de Nomina...'},:class =>"form-control", REQUIRED: "")  %>
+        <div class="col-xs-6">
+          <%= f.label "Tipo de nomina"%><br>
+          <div class="form-group input-group">
+            <span class="input-group-addon">
+              <span class="fa fa-align-justify"></span>
+            </span>
+            <%= f.select(:tipo_id, options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}, f.object.tipo_id),{include_blank:'Seleccione un Tipo de Nomina...'},:class =>"form-control", REQUIRED: "")  %>
+          </div>
         </div>
-
         <%= f.fields_for :sueldos  do |sueldo_builder|  %>
         <% if sueldo_builder.object.activo? %>
 
-        <div class="form-group col-xs-6">
+        <div class="col-xs-6">
           <%= sueldo_builder.label 'sueldo Normal' %>
-          <%= sueldo_builder.text_field :monto,:class => "form-control", REQUIRED: "" %>
+          <div class="form-group input-group">
+            <span class="input-group-addon">
+              <span class="fa fa-money"></span>
+            </span>
+            <%= sueldo_builder.text_field :monto,:class => "form-control", REQUIRED: "" %>
+          </div>
         </div>
-        <div class="form-group col-xs-6">
+        <div class="col-xs-6">
           <%= sueldo_builder.label :sueldo_integral %>
-          <%= sueldo_builder.text_field :sueldo_integral,:class => "form-control", REQUIRED: "" %>
+          <div class="form-group input-group">
+            <span class="input-group-addon">
+              <span class="fa fa-money"></span>
+            </span>
+            <%= sueldo_builder.text_field :sueldo_integral,:class => "form-control", REQUIRED: "" %>
+          </div>
         </div>
-
         <% end %>
         <% end %>
       </div>
-
-            <%= render 'layouts/botones', p: cargos_path  %>
+      <%= render 'layouts/botones', p: cargos_path  %>
     </div>
 
   </div>
 
-
-      <% end %>
+  <% end %>
