--- a/app/views/conceptospersonales/_form.html.erb
+++ b/app/views/conceptospersonales/_form.html.erb
@@ -1,16 +1,5 @@
 <%= form_for(@conceptopersonal) do |f| %>
-<% if @conceptopersonal.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@conceptopersonal.errors.count, "error") %>
-    prohibited this concepto from being saved:</h2>
-
-  <ul>
-    <% @conceptopersonalerrors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= render 'layouts/errores', :x=>@conceptopersonal %>
 
 <div class="col-xs-6">
   <%= f.label :nombre %><br>
