--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -1,14 +1,8 @@
 <%= form_for(@persona) do |f| %>
-<% if @persona.errors.any? %>
-<div id="error_explanation">
-
-  <%
- messages="<h2>"+@persona.errors.count.to_s+" errores al guardar</h2>"
-    @persona.errors.full_messages.each do |message|
- messages<<"<li>"<<message<<"</li>"
-
- end
- %>
+<%= render 'layouts/errores', :x=>@persona %>
+    </ul>
+</div>
+<% end %>
   <div class="alert alert-danger alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert">
       <span aria-hidden="true">&times;</span>
