--- a/app/views/conceptos/index.html.erb
+++ b/app/views/conceptos/index.html.erb
@@ -10,14 +10,14 @@
   </div>
   <%if Concepto.all.where(tipo_de_concepto:0).length>0%>
   <div class="panel-body">
-    <div class="table-responsive">
+    <div class="table-responsive text-center">
       <table class="table table-bordered table-condensed table-responsive table-bordered">
         <thead>
           <tr>
-            <th>Nombre</th>
-            <th>Formula</th>
-            <th>Modalidad de pago</th>
-            <thclass= "actions" style= "width: 100px;">Acciones</th>
+            <th class= "actions">Nombre</th>
+            <th class= "actions">Formula</th>
+            <th class= "actions">Modalidad de pago</th>
+            <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
         </thead>
 
@@ -52,14 +52,14 @@
   </div>
     <%if Concepto.all.where(tipo_de_concepto:1).length>0%>
   <div class="panel-body">
-    <div class="table-responsive">
+    <div class="table-responsive text-center">
       <table class="table table-bordered table-condensed table-responsive table-bordered">
         <thead>
           <tr>
-            <th>Nombre</th>
-            <th>Formula</th>
-            <th>Modalidad de pago</th>
-            <th>Acciones</th>
+            <th class= "actions">Nombre</th>
+            <th class= "actions">Formula</th>
+            <th class= "actions">Modalidad de pago</th>
+            <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
         </thead>
 
@@ -71,9 +71,11 @@
             <td><%= concepto.nombre %></td>
             <td><%= concepto.formula %></td>
             <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
-            <td><%= link_to '', concepto,class: "fa fa-eye" %></td>
-            <td><%= link_to '', edit_concepto_path(concepto),class: "fa fa-pencil" %></td>
-            <td><%= link_to '', concepto,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+            <td><div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+
+            <%= link_to '', concepto,class: "btn btn-default fa fa-eye " %>
+            <%= link_to '', edit_concepto_path(concepto),class: "btn btn-default fa fa-pencil" %>
+            <%= link_to '', concepto,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
           </tr>
           <% end %>
         </tbody>
