--- a/app/views/personas/_datos.html.erb
+++ b/app/views/personas/_datos.html.erb
@@ -99,15 +99,7 @@
         <%end%>
       </div>
     </div>
-    <div class="col-lg-6">
-      <%= f.label :sueldo_integral %>
-      <div class="form-group input-group">
-        <span class="input-group-addon">
-          <span class="fa fa-money"></span>
-        </span>
-        <%= f.number_field :sueldo_integral ,:class => "form-control",REQUIRED: "" %>
-      </div>
-        </div>
+
     <div class="col-xs-6 form-group">
       <%= f.label :cuenta %>
       <div class="form-group input-group">
@@ -126,7 +118,7 @@
         <%= f.text_area :direccion ,:class => "form-control",REQUIRED: "" %>
       </div>
     </div>
-    <div class="col-xs-6 form-group">
+    <div class="col-xs-12 form-group">
       <%= f.label 'Este empleado paga: ' %>
       <div class="input-group">
         <span class="input-group-addon">
@@ -136,6 +128,11 @@
         <input type="text" disabled value="<%= :FAOV %>" class="form-control">
         <span class="input-group-addon">
           <%= f.check_box :IVSS %>
+        </span>
+
+        <input type="text" disabled value="<%= "CAJA DE AHORRO" %>" class="form-control">
+        <span class="input-group-addon">
+          <%= f.check_box :caja_de_ahorro %>
         </span>
 
         <input type="text" disabled value="<%= :IVSS %>" class="form-control">
