--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -78,7 +78,7 @@
       <span class="pull-left">
         <strong class="">Sueldo Integral</strong>
       </span>
-      <%= @persona.sueldo_integral%></li>
+      <%= @persona.cargo.sueldos.last.sueldo_integral%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Cedula</strong>
