--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -10,11 +10,11 @@
   </div>
  <%if Tipo.all.length>0%>
   <div class="panel-body">
-    <div class="table-responsive">
+    <div class="table-responsive text-center">
       <table class="table table-bordered table-condensed table-responsive table-bordered">
         <thead>
           <tr>
-            <th>Nombre</th>
+            <th class= "actions">Nombre</th>
             <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
         </thead>
