--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -19,16 +19,18 @@
       <% end %>
 
       <div class="form-group col-md-12">
-        <%= f.label :nombre %><br>
-        <%= f.text_field :nombre ,class: "form-control", REQUIRED: "", autofocus: "" %>
-        <div class="form-group">
+        <div class="form-group col-xs-6">
+          <%= f.label :nombre %><br>
+          <%= f.text_field :nombre ,class: "form-control", REQUIRED: "", autofocus: "" %>
+        </div>
+        <div class="form-group col-xs-6">
           <%= f.label :dependencia_id %><br>
           <% if f.object.dependencia_id=f.object.dependencia_id ? f.object.dependencia_id : 0%>
           <%= f.select(:dependencia_id, options_for_select(Dependencia.all.map{|s|[s.nombre, s.id]}, f.object.dependencia_id),{include_blank:'Seleccione una Dependencia...'},:class =>"form-control", REQUIRED: "" )  %></span>
-  <%end%>
+        <%end%>
       </div>
     </div>
-  <%= render 'layouts/botones', p: departamentos_path  %>
+    <%= render 'layouts/botones', p: departamentos_path  %>
   </div>
 </div>
 </div>
